<resources>
    <string name="app_name">NewEthioEncarta</string>
    <string-array name="encarta_array"></string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_amharic_home">AmharicHome</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="dmt_descrption">The first kingdom known to have existed in Ethiopia was the kingdom of Dmt, with its capital at Yeha, where a Sabaean style temple was built around 700 BC. It rose to power around the 10th century BC. The Dmt kingdom was influenced by the Sabaeans in Yemen, however it is not known to what extent. While it was once believed that Dmt was a Sabaean colony, it is now believed that Sabaean influence was minor, limited to a few localities, and disappeared after a few decades or a century, perhaps representing a trading or military colony in some sort of symbiosis or military alliance with the civilization of Dʿmt or some other proto-Aksumite state.[22][23] Few inscriptions by or about this kingdom survive and very little archaeological work has taken place. As a result, it is not known whether Dʿmt ended as a civilization before Aksums early stages, evolved into the Aksumite state, or was one of the smaller states united in the Aksumite kingdom possibly around the beginning of the 1st century."
</string>
    <string name="gonderian_peird_descrption">The Jesuits who had accompanied or followed the Gama expedition into Ethiopia, and fixed their headquarters at Fremona (near Adwa), were oppressed and neglected, but not actually expelled. In the beginning of the 17th century Father Pedro Páez arrived at Fremona, a man of great tact and judgment, who soon rose into high favour at court, and won over the emperor to his faith. He directed the erection of churches, palaces and bridges in different parts of the country, and carried out many useful works. His successor Afonso Mendes was less tactful, and excited the feelings of the people against him and his fellow Europeans. Upon the death of Emperor Susenyos and accession of his son Fasilides in 1633, the Jesuits were expelled and the native religion restored to official status. Fasilides made Gondar his capital and built a castle there which would grow into the castle complex known as the Fasil Ghebbi, or Royal Enclosure. Fasilides also constructed several churches in Gondar, many bridges across the country, and expanded the Church of Our Lady Mary of Zion in Aksum.
During this time of religious strife Ethiopian philosophy flourished, and it was during this period that the philosophers Zera Yacob and Walda Heywat lived. Zera Yaqob is known for his treatise on religion, morality, and reason, known as Hatata.
</string>
    <string name="erly_solomonc_descrption">Around 1270, a new dynasty was established in the Abyssinian highlands under Yekuno Amlak who deposed the last of the Zagwe kings and married one of his daughters. According to legends, the new dynasty were male-line descendants of Aksumite monarchs, now recognized as the continuing Solomonic dynasty (the kingdom being thus restored to the biblical royal house). This legend was created to legitimize the Solomonic dynasty and was written down in the 14th century in the Kebra Negast, an account of the origins of the Solomonic dynasty.
Under the Solomonic dynasty, the chief provinces became Tigray (northern), what is now Amhara (central) and Shewa (southern). The seat of government, or rather of overlordship, had usually been in Amhara or Shewa, the ruler of which, calling himself nəgusä nägäst, exacted tribute, when he could, from the other provinces. The title of nəgusä nägäst was to a considerable extent based on their alleged direct descent from Solomon and the queen of Sheba; but it is needless to say that in many, if not in most, cases their success was due more to the force of their arms than to the purity of their lineage. Under the early Solomonic dynasty Ethiopia engaged in military reforms and imperial expansion which left it dominating the Horn of Africa, especially under the rule of Amda Seyon I. There was also great artistic and literary advancement at this time, but also a decline in urbanisation as the Solomonic emperors did not have any fixed capital, but rather moved around the empire in mobile camps.
Under the early Solomonic dynasty monasticism grew strongly. The abbot Abba Ewostatewos created a new order called the Ewostathians who called for reforms in the church, including observance of the Sabbath, but was persecuted for his views and eventually forced into exile, eventually dying in Armenia. His zealous followers, also persecuted, formed isolated communities in Tigray. The movement grew strong enough that the emperor Dawit I, after first trying to crush the movement, legalized their observance of the Sabbath and proselytization of their faith. Finally under Zara Yaqob a compromise was made between the new Egyptian bishops and the Ewostathians at the Council of Mitmaq in 1450, restoring unity to the Ethiopian church.
</string>
    <string name="comminst_party">After a period of civil unrest that began in February 1974, a provisional administrative council of soldiers, known as the Derg (committee), seized power from the aging Emperor Haile Selassie I on September 12, 1974, and installed a government that was socialist in name and military in style. The Derg summarily executed 59 members of the former government, including two former Prime Ministers and Crown Councilors, Court officials, ministers, and generals. Emperor Haile Selassie died on August 22, 1975. He was allegedly strangled in the basement of his palace or smothered with a wet pillow.
Lt. Col. Mengistu Haile Mariam assumed power as head of state and Derg chairman, after having his two predecessors killed, as well as tens of thousands of other suspected opponents. The new Marxist government undertook socialist reforms, including nationalisation of landlords property and the churchs property. Before the coup, Ethiopian peasants way of life was thoroughly influenced by the church teachings; 280 days a year are religious feasts or days of rest. Mengistus years in office were marked by a totalitarian-style government and the countrys massive militarization, financed by the Soviet Union and the Eastern Bloc, and assisted by Cuba. In December 1976, an Ethiopian delegation in Moscow signed a military assistance agreement with the Soviet Union. The following April 1977, Ethiopia abrogated its military assistance agreement with the United States and expelled the American military missions.
The new regime in Ethiopia met with armed resistance from the large landowners, the royalists and the nobility. The resistance was largely centered in the province of Eritrea. The Derg decided in November 1974 to pursue war in Eritrea rather than seek a negotiated settlement. By mid-1976, the resistance had gained control of most of the town and the countryside of Eritrea.
In July 1977, sensing the disarray in Ethiopia, Somalia attacked across the Ogaden in pursuit of its irredentist claims to the ethnic Somali areas of Ethiopia (see Ogaden War). They were assisted in this invasion by the armed Western Somali Liberation Front. Ethiopian forces were driven back far inside their own frontiers but, with the assistance of a massive Soviet airlift of arms and 17,000 Cuban combat forces, they stemmed the attack. The last major Somali regular units left the Ogaden March 15, 1978. Twenty years later, the Somali region of Ethiopia remained under-developed and insecure.
From 1977 through early 1978, thousands of suspected enemies of the Derg were tortured and/or killed in a purge called the Qey Shibir (Red Terror). Communism was officially adopted during the late 1970s and early 1980s; in 1984, the Workers' Party of Ethiopia (WPE) was established, and on February 1, 1987, a new Soviet-style civilian constitution was submitted to a popular referendum. It was officially endorsed by 81% of voters, and in accordance with this new constitution, the country was renamed the People's Democratic Republic of Ethiopia on September 10, 1987, and Mengistu became president.
The regime's collapse was hastened by droughts and a famine, which affected around 8 million people and left 1 million dead, as well as by insurrections, particularly in the northern regions of Tigray and Eritrea. The regime also conducted a brutal campaign of resettlement and villagization in Ethiopia in the 1980s. In 1989, the Tigrayan Peoples' Liberation Front (TPLF) merged with other ethnically based opposition movements to form the Ethiopian Peoples' Revolutionary Democratic Front
</string>
    <string name="people_and_society">People and society</string>
    <string name="closing">In some central and northern areas, women is traditional clothes are often made from cloth called shemma. It is basically cotton cloth, about 90 cm wide, woven in long strips which are then sewn together. Sometimes shiny threads are woven into the fabric for an elegant effect. It takes about two to three weeks to make enough cloth for one dress. The bottom of the garment or shirt may be ornamented with patterns.
Men wear pants and a knee-length shirt with a white collar, and perhaps a sweater. They also frequently wear knee-high socks, while women might not wear socks at all. Men as well as women wear shawls, the netela. The shawls are worn in a different style for different occasions. When going to church, women cover their hair with them and pull the upper ends of the shawl about their shoulders reproducing a cross (meskelya), with the shiny threads appearing at the edge. During funerals, the shawl is worn so the shiny threads appear at the bottom (madegdeg). Womens dresses are called habesha kemis, and are often made from the shemma cloth. The dresses are usually white with some color above the lower hem. Bracelets and necklaces of silver or gold are worn on arms and feet to complete the look. A variety of designer dinner dresses combining traditional fabric with modern style are now worn by some ladies in the cities.
These traditional clothes are still worn on a day-to-day-basis in the countryside. In cities and towns, western clothes are popular. However, on special occasions such as New Year (Enkutatash), Christmas (Genna) or weddings, some wear traditional clothes.
Often, a woman will cover her head with a shash, a cloth that is tied at the neck. Shama and kuta, gauze-like white fabrics, are often used. This is common among both Muslim and Christian women. Elderly women will wear a sash on a day-to-day basis, while other women only wear a sash also called a netela while attending church.
</string>
    <string name="music_and_cultural_game">Music and Cultural game</string>
    <string name="science_and_nature">Science and nature</string>
    <string name="heritage">Heritage</string>
    <string name="commncative">Commncative</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
</resources>